trying to fix hamburger icon on mobile safari

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section {
   padding: 1em;
   align-items: center!important;
   position: fixed;
+  z-index: 3!important;
 }
 .logo {
     display: grid;
@@ -84,6 +85,7 @@ section {
     max-width: 400px;
     margin:0 auto;
     padding:0;
+    z-index: 3!important;
 }
 
 .menu > li {
@@ -162,12 +164,14 @@ align-items: center;
     padding: 0;
     border: 0px solid white;
     transition: max-height 200ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 3!important;
   }
   #menu-toggle:checked ~ #menu li {
     border: 1px solid rgb(255, 255, 255);
     max-height: 500px;
     padding: 0.5em;
     transition: max-height 200ms cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 3!important;
   }
 
   .menu > li {
@@ -181,6 +185,7 @@ align-items: center;
     font-size: 2rem;
     align-items: center;
     text-align:center;
+    z-index: 3!important;
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid rgb(255, 255, 255);
@@ -567,7 +572,6 @@ input[type=range] {
 
 .run-slider {
     transform: rotate(180deg);
-    z-index:-99!important;
 }
 
 .run-slider::-webkit-slider-thumb {
